# honor-downloader

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  bt.go  entrypoint.sh  fetch.go  go.mod  go.sum  goreleaser.go  honor-downloader  main.go  storage.go
.github/workflows/: build.yml  post-go-dependabot.yml  release.yml
src/: main.rs
